# cmake-learning

./: README.md
cmakeStuff/: CMakeLists.txt
include/: A.hpp  B.hpp
src/: main.cpp
